Admin Management
- Implemented admin user
- Admin can see "Manage Products" button in main products page
- Admin can delete a product from the database