@@ -2,10 +2,12 @@ package com.HecklebottomTrovers.ecommerce.security;
 
 import com.HecklebottomTrovers.ecommerce.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -25,8 +27,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // You can map roles to authorities here if needed
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(user.getRole()));
     }
 
     @Override
